# imx-mp4-parser

./: LICENSE_Apple_MPEG-4  SBOM.spdx.json  SCR.txt  meson.build
src/mp4_parser/: Android.bp  meson.build
src/mp4_parser/lib/inc/: AC4InfoParser.h  BitReader.h  Charset.h  FileMappingDataHandler.h  FileMappingObject.h  FragmentedReader.h  ISOMovies.h  ItemTable.h  MJ2Atoms.h  MP4Atoms.h  MP4DataHandler.h  MP4Descriptors.h  MP4FragmentedQueue.h  MP4Impl.h  MP4InputStream.h  MP4LinkedList.h  MP4Movies.h  MP4OSMacros.h  MP4ParserAPI.h  MP4ParserPriv.h  MP4TagList.h  MP4TrackReader.h  MP4UtilityFile.h  MovieTracks.h  W32FileMappingObject.h
src/mp4_parser/lib/src/: AC3SampleEntryAtom.c  AC4InfoParser.c  AC4SampleEntryAtom.c  ALACSampleEntryAtom.c  APVCAtom.c  AVCCAtom.c  AdpcmSampleEntryAtom.c  AmrSampleEntryAtom.c  ApvSampleEntryAtom.c  AudioConfig.c  AudioSampleEntryAtom.c  Av1SampleEntryAtom.c  AvcSampleEntryAtom.c  BaseDescriptor.c  BitReader.c  BitrateAtom.c  Charset.c  ChunkLargeOffsetAtom.c  ChunkOffsetAtom.c  ClockReferenceMediaHeader.c  ColorParameterAtom.c  CompactSampleSizeAtom.c  CopyrightAtom.c  DAMRAtom.c  DIVXSampleEntryAtom.c  DataEntryURLAtom.c  DataEntryURNAtom.c  DataInformationAtom.c  DataReferenceAtom.c  DecodingOffsetAtom.c  DegradationPriorityAtom.c  DolbyVisionSampleEntryAtom.c  EC3SampleEntryAtom.c  ESDAtom.c  ESUpdateCommand.c  EditAtom.c  EditListAtom.c  FileMappingDataHandler.c  FlacSampleEntryAtom.c  FragmentedReader.c  (+133 more)
